--- a/views/new.ejs
+++ b/views/new.ejs
@@ -53,7 +53,7 @@
     </nav>
     <!-- Form for New -->
 <br>
-    <h2>Check Site Vulnerability</h2>
+    <h2>Data Vulnerability Survey</h2>
     <br>
     <form action="/results" method="POST">
       <div class="mb-3">
@@ -73,8 +73,8 @@
         <label for="https">Have a site set up with HTTPS: </label>
         <input type="checkbox" name="https" id="https"/>
         <br />
-        <label for="useVNP">Use a VPN when accessing public Wi-Fi: </label>
-        <input type="checkbox" name="useVNP" id="useVNP" />
+        <label for="useVPN">Use a VPN when accessing public Wi-Fi: </label>
+        <input type="checkbox" name="useVPN" id="useVPN" />
         <br />
         <label for="comment">Comments:</label>
         <textarea
@@ -101,7 +101,7 @@
                 </button>
               </div>
               <div class="modal-body">
-            Are you sure you want to submit?
+            Are you sure you want to submit your survey? Responses will be tracked and used for public reporting. 
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Review</button>
