--- a/views/facts.ejs
+++ b/views/facts.ejs
@@ -27,6 +27,29 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap");
+
+      body {
+        font-family: "Roboto Mono", monospace;
+      }
+      .facts {
+        padding-left: 7%;
+        padding-right: 7%;
+      }
+      .footer {
+        font-size: 11px;
+        padding: 3px;
+        bottom: 0;
+        /* overflow: hidden; */
+        width: 100%;
+        position: fixed;
+        text-align: center;
+        color: #5a5d5e;
+        font-family: "Roboto Mono", monospace;
+        background-color: white;
+      }
+    </style>
   </head>
   <body>
     <!-- Navigation -->
@@ -45,7 +68,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/New">Check Site Vulnerability</a>
+          <a class="nav-item nav-link" href="/New"
+            >Data Vulnerability Survey
+          </a>
           <a class="nav-item nav-link" href="/facts">Cyber Security Facts</a>
           <a class="nav-item nav-link" href="/sources">Sources</a>
         </div>
@@ -56,7 +81,12 @@
     <br />
     <!-- forEach FACTS LOOP -->
     <% facts.forEach((fact, index)=>{ %>
-    <div><%=fact.funFact%></div>
+    <div class="facts"><%=fact.funFact%></div>
+    <br />
     <%})%>
+    <!-- Footer -->
+    <footer class="footer">
+      Created by Guadalupe Ramirez
+    </footer>
   </body>
 </html>
