--- a/views/show.ejs
+++ b/views/show.ejs
@@ -27,6 +27,66 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap");
+
+      body {
+        font-family: "Roboto Mono", monospace;
+      }
+      .content {
+        padding: 3%;
+        justify-content: center;
+      }
+
+      button {
+        display: flex;
+        justify-content: center;
+      }
+
+      h2,
+      h3 {
+        text-align: center;
+      }
+      table,
+      .buttonsInLine {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .divider {
+        width: 9px;
+        height: auto;
+        display: inline-block;
+      }
+
+      .footer {
+        font-size: 11px;
+        padding: 3px;
+        bottom: 0;
+        width: 100%;
+        position: fixed;
+        text-align: center;
+        color: #5a5d5e;
+        font-family: "Roboto Mono", monospace;
+      }
+      table {
+        margin-left: 18%;
+        margin-right: 18%;
+        border: 10px solid #eef0f2;
+        background-color: #eef0f2;
+      }
+      .footer {
+        font-size: 11px;
+        padding: 3px;
+        bottom: 0;
+        width: 100%;
+        position: fixed;
+        text-align: center;
+        color: #5a5d5e;
+        font-family: "Roboto Mono", monospace;
+      }
+    </style>
   </head>
   <body>
     <!-- Navigation -->
@@ -45,39 +105,58 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/New">Check Site Vulnerability</a>
+          <a class="nav-item nav-link" href="/New"
+            >Data Vulnerability Survey
+          </a>
           <a class="nav-item nav-link" href="/facts">Cyber Security Facts</a>
           <a class="nav-item nav-link" href="/sources">Sources</a>
         </div>
       </div>
     </nav>
     <!-- Body -->
-    <br />
-    <h2>View Details</h2>
-    <br />
-    <table>
-      <tr>
-        <td>
-          <br />
-          Site URL: <%=User.site%>
-          <br />
-          Use Strong Password: <%=User.passwordSafe%>
-          <br />
-          Site set up with HTTPS: <%=User.https%>
-          <br />
-          Use VPN: <%=User.useVPN%>
-          <br />
-          Comments: <%=User.comment%>
-          <br />
-          <button onclick="window.location.href = '/show/<%=User.id%>/edit';">
-            Modify
-          </button>
-          <!-- Delete -->
-          <form action="/show/<%=User.id%>?_method=DELETE" method="POST">
-            <input type="submit" name="submit" value="DELETE" />
-          </form>
-        </td>
-      </tr>
-    </table>
+    <div class="content">
+      <br />
+      <h2>View Details</h2>
+      <br />
+      <table>
+        <tr>
+          <td>
+            <br />
+            Site URL: <%=User.site%>
+            <br />
+            Use Strong Password: <%=User.passwordSafe%>
+            <br />
+            Site set up with HTTPS: <%=User.https%>
+            <br />
+            Use VPN: <%=User.useVPN%>
+            <br />
+            Comments: <%=User.comment%>
+            <br />
+            <br />
+            <div class="buttonsInLine">
+              <button
+                class="btn btn-dark"
+                onclick="window.location.href = '/show/<%=User.id%>/edit';"
+              >
+                Modify
+              </button>
+              <div class="divider"></div>
+              <form action="/show/<%=User.id%>?_method=DELETE" method="POST">
+                <input
+                  class="btn btn-dark"
+                  type="submit"
+                  name="submit"
+                  value="Delete"
+                />
+              </form>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <!-- Footer -->
+    <footer class="footer">
+      Created by Guadalupe Ramirez
+    </footer>
   </body>
 </html>
